@@ -1,3 +1,11 @@
+2004-03-26  Masatake YAMATO  <jet@gyve.org>
+
+	* simple.el (completion-setup-function): Emphasize the
+	first uncommon characters in the completions;and de-emphasize
+	the common prefix substrings.
+	(completion-emphasis): New face.
+	(completion-de-emphasis): New face.
+
 2004-03-25  Sam Steingold  <sds@gnu.org>
 
 	* vc.el (vc-print-log): Fixed a bug in the last patch:
